update code